styessheet created, styles removed from style tag in index file

--- a/index.html
+++ b/index.html
@@ -8,40 +8,11 @@
     <meta title="author" content="Melika">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   
+    <link rel="stylesheet"  href="styles/index.css">
+
 </head>
 
-<style>
-    body{
-        background-color: black;
-        width: 100%;
-        height: auto;
-    }
-    #whack{
-        position: relative;
-        background-color: black;
-        width: 800px;
-        height: 800px;
-    }
-    
-    #mole{ width: 30px; height:30px;
-       position: relative;
-    }
 
-    input:focus{outline:none;}
-
-    header{
-        display: flex;
-    }
-
-    h1{
-        font-family: cursive;
-        color: white;
-        font-size: 36px;
-        z-index: 10;
-        padding-right: 1rem;
-    }
-</style>
 
 
 <body>
@@ -58,6 +29,6 @@
     </div>
 
 </body>
-<script src="index.js"></script>
+<script src="./script/index.js"></script>
 
 </html>
