--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
     <h1>Your score is</h1>
-    <h1 id="score"></h1>
+    <h1 id="score">0</h1>
     </header>
     
     <div id="whack">
